modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,39 @@
 body{
     max-width: 80%;
     margin: auto;
-    display: flex;
-    flex-direction: column;
+    background: linear-gradient(0.25turn, rgb(236, 202, 138), rgb(118, 182, 118));
+}
+
+h1 {
+    text-align: center;
+    font-size: 30px;
+    color: azure
+}
+
+p {
+    text-align: center;
+    font-size: 17px;
+    color: rgb(53, 66, 66);
+} 
+
+#name-label,
+#email-label,
+#number-label {
+    max-width: 45%;
+    display: block;
+    margin: 0 auto;
+    color: rgb(53, 47, 47);
+}
+
+#name,
+#email,
+#number {
+    border-radius: 2%;
+    background-color: rgb(224, 220, 220);
+    width: 80%
+}
+
+#name-label,
+#email-label {
+    margin-right: 2px
 }
