--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ p {
 #number-label {
     max-width: 45%;
     display: block;
-    margin: 0 auto;
+    margin: 5px auto;
     color: rgb(53, 47, 47);
 }
 
@@ -30,10 +30,11 @@ p {
 #number {
     border-radius: 2%;
     background-color: rgb(224, 220, 220);
-    width: 80%
+    width: 80%;
 }
 
 #name-label,
 #email-label {
-    margin-right: 2px
+    padding-left: 27px;
+    
 }
